fix z-indexes

--- a/src/esp/bindings_js/bindings.css
+++ b/src/esp/bindings_js/bindings.css
@@ -59,7 +59,7 @@
   position: absolute;
   top: 5%;
   right: 5%;
-  z-index: 11;
+  z-index: 12;
   width: 100;
   height: 50;
   pointer-events: none;
@@ -73,21 +73,7 @@
   position: absolute;
   top: 5%;
   left: 5%;
-  z-index: 11;
-  width: 100;
-  height: 50;
-  pointer-events: none;
-  color: slategray;
-  font-size: x-large;
-  font-weight: bold;
-  display: none;
-}
-
-#category {
-  position: absolute;
-  top: 5%;
-  left: 5%;
-  z-index: 11;
+  z-index: 12;
   width: 100;
   height: 50;
   pointer-events: none;
@@ -103,7 +89,7 @@
   left: calc((100% - 1280px)*2/3 + 640px);
   width: 640px;
   height: 480px;
-  z-index: 12;
+  z-index: 13;
   background-color: #444;
   visibility: hidden;
   pointer-events: none;
@@ -129,7 +115,7 @@
   left: calc((100% - 1280px)/3);
   width: 640px;
   height: 480px;
-  z-index: 12;
+  z-index: 13;
   background-color: #444;
   pointer-events: none;
 }
